--- a/k8s/webapp/0-configmap-init-files.yaml
+++ b/k8s/webapp/0-configmap-init-files.yaml
@@ -20,7 +20,9 @@ data:
     BBLM;Season 5;S.5;True;-2:1\n-1:2\n0:3\n1:4\n2:5
     WBBL;Season 1;S.1;False;-1:0\n0:1\n1:3
     WBBL;Season 2;S.2;False;-1:0\n0:1\n1:3
-    WBBL;Season 3;S.3;True;-1:0\n0:1\n1:3
+    WBBL;Season 3;S.3;False;-1:0\n0:1\n1:3
+    WBBL;Season 4;S.4;False;-1:0\n0:1\n1:3
+    WBBL;Season 5;S. 5;True;-1:0\n0:1\n1:3
   races.csv: |
     name
     Amazonen
@@ -54,6 +56,7 @@ data:
     Waldelfen
     Zwerge
     Echsenmenschen
+    Gnome
   teams_and_coaches.csv: |
     name;coach_first_name;coach_last_name;coach_display_name;race_name;is_disqualified;season_short_name;league_short_name
     Bloody Mary;Christian;Stach; ;Echsenmenschen;False;S.1;BBLM
@@ -353,6 +356,64 @@ data:
     Middenland Wolves;Faton;Sejdija; ;Imperial Nobility;False;S.3;WBBL
     Gut Smashas;Marco;Oberecht;Obi;Orks;False;S.3;WBBL
     Bloodbrothers;Felix;Blankermann; ;Khorne;False;S.3;WBBL
+    Carroburg Cosmopolitans;Bernd;Junker; ;Old World Alliance;False;S.4;WBBL
+    Mortheim Maniacs;Bernd;Junker; ;Menschen;False;S.4;WBBL
+    Hashuts Brazen Bulls;Faton;Sejdija; ;Chaoszwerge;False;S.4;WBBL
+    Zero Fox Given;Sven;Lehmkuhl; ;Gnome;False;S.4;WBBL
+    Orc Titans;Johann;Kuhn; ;Schwarzorks;False;S.4;WBBL
+    Bilgewater Loonshiners;Max;Pomblitz; ;Goblins;False;S.4;WBBL
+    Valhalla Ice Warriors;Simon;Nosthoff; ;Norse;False;S.4;WBBL
+    Chicxulub Crater Crushers;Bartholomäus;Wieczorek;Barth;Echsenmenschen;False;S.4;WBBL
+    Karak Eight Peaks Kroppzeuch;Bartholomäus;Wieczorek;Barth;Goblins;False;S.4;WBBL
+    Pitbull Stealers;Sven;Fatum; ;Nekromanten;False;S.4;WBBL
+    Badlandz Loonz;Faton;Sejdija; ;Goblins;False;S.4;WBBL
+    Jolly Headsmashers;Max;Pomblitz; ;Chaoszwerge;False;S.4;WBBL
+    Gut Smashas;Marco;Oberecht;Obi;Orks;False;S.4;WBBL
+    Bonebreaker and Ogres;Chris;Pott; ;Oger;False;S.4;WBBL
+    Münster Undead;Tobias;Stelter; ;Untote;False;S.4;WBBL
+    Es langt! Victor;Enrique;Chmiel; ;Vampire;False;S.4;WBBL
+    Monasterium Longhorns;André;Gährken; ;Chaos Chosen;False;S.4;WBBL
+    Bumbay Buttgrabbaz;Metthew;Phipps;Matty;Nekromanten;False;S.4;WBBL
+    Die Paketboten;Max;Richter; ;Amazonen;False;S.4;WBBL
+    Gorks Saints;Marcus;Folz;Lasse;Orks;False;S.4;WBBL
+    Die Sechsen;Max;Richter; ;Echsenmenschen;False;S.4;WBBL
+    Happy Hungry Hippos;Felix;Blankermann; ;Halblinge;False;S.4;WBBL
+    Skull Riders MC;Simon;Nosthoff; ;Zwerge;False;S.4;WBBL
+    Doom and Gloom;Raphael;Oppenberg; ;Chaos Chosen;False;S.4;WBBL
+    Halfling Smasher;Chris;Pott; ;Zwerge;False;S.4;WBBL
+    Die Physiognomie des Bösen;Philipp;Saatkamp;Fips;Gnome;False;S.4;WBBL
+    Greenhavn Huscarls;Kevin;Lequen; ;Norse;False;S.4;WBBL
+    Gnomige Gnome;Berit;Schlüter; ;Gnome;False;S.4;WBBL
+    Lab Rats;Felix;Blankermann; ;Skaven;False;S.4;WBBL
+    Naggaroth Nightstabbers;André;Gährken; ;Dunkelelfen;False;S.4;WBBL
+    Münster Vampire;Tobias;Stelter; ;Vampire;False;S.4;WBBL
+    Mimigernafords Horde;Sven;Fatum; ;Chaos Renegades;False;S.4;WBBL
+    Magadan  Raiders;Metthew;Phipps;Matty;Norse;False;S.4;WBBL
+    TuS Heringsmoor;Philipp;Saatkamp;Fips;Slann;False;S.4;WBBL
+    BSV Hamm;Alexander;Voß; ;Vampire;False;S.4;WBBL
+    Lustria Beasts;Simon;Kuhn; ;Amazonen;False;S. 5;WBBL
+    Mutated Vaultboys 87;Simon;Nosthoff; ;Nurgle;False;S. 5;WBBL
+    KhorneDogs of Doom;Timo;Lübke; ;Khorne;False;S. 5;WBBL
+    BBC Rhynern;Alexander;Voß; ;Elfen Union;False;S. 5;WBBL
+    Knochensack FC;Johann;Kuhn; ;Untote;False;S. 5;WBBL
+    Carroburg Cosmopolitans;Bernd;Junker; ;Old World Alliance;False;S. 5;WBBL
+    Brazen Bulls of Hashut;Faton;Sejdija; ;Chaoszwerge;False;S. 5;WBBL
+    Münster Dark Elf;Tobias;Stelter; ;Dunkelelfen;False;S. 5;WBBL
+    Skull Riders MC;Simon;Nosthoff; ;Zwerge;False;S. 5;WBBL
+    Zero Fox Given;Sven;Lehmkuhl; ;Gnome;False;S. 5;WBBL
+    Just Here For The Violins;Sven;Lehmkuhl; ;Khorne;False;S. 5;WBBL
+    Lions Lions;Lion;Foede; ;Elfen Union;False;S. 5;WBBL
+    Red Duke's Raiders;Sven;Fatum; ;Vampire;False;S. 5;WBBL
+    Tlaxtlan Thunder Lizards;Bartholomäus;Wieczorek;Barth;Echsenmenschen;False;S. 5;WBBL
+    Bad Moon Moonshiners;Bartholomäus;Wieczorek;Barth;Goblins;False;S. 5;WBBL
+    Happy Hungry Hippos;Felix;Blankermann; ;Halblinge;False;S. 5;WBBL
+    Runaway Rats;Felix;Blankermann; ;Skaven;False;S. 5;WBBL
+    TuS Heringsmoor;Philipp;Saatkamp;Fips;Slann;False;S. 5;WBBL
+    Naggaroth Nightstabers;André;Gährken; ;Dunkelelfen;False;S. 5;WBBL
+    Sylvanian Spotlight;André;Gährken; ;Vampire;False;S. 5;WBBL
+    Middenland Wolves;Faton;Sejdija; ;Imperial Nobility;False;S. 5;WBBL
+    De Istappkastare;Max;Pomblitz; ;Norse;False;S. 5;WBBL
+    Evil Sunz Sons;Marco;Oberecht;Obi;Orks;False;S. 5;WBBL
   matches.csv: |
     match_number;team1;team2;td_team_1;td_team_2;point_modification_team_1;point_modification_team_2;team_1_surrendered;team_2_surrendered;is_team_1_victory_by_kickoff;is_team_2_victory_by_kickoff;is_playoff_match;is_tournament_match;season_short_name;league_short_name
     1;Khrx Seahawks;LoneBoneShamblers;2;1;0;0;False;False;False;False;False;False;S.1;BBLM
@@ -1093,6 +1154,89 @@ data:
     92;Masters of the Universe;Zharrduk Oathbreakers;1;1;0;0;False;False;False;False;False;False;S.3;WBBL
     93;Stern des Nordens;Bloodbrothers;3;0;0;0;False;False;False;False;False;False;S.3;WBBL
     94;Zharrduk Oathbreakers;Gut Smashas;1;0;0;0;False;False;False;False;False;False;S.3;WBBL
+    95;Wulfriks Wanderers;Velocity Raptors;0;3;0;0;False;False;False;False;False;False;S.3;WBBL
+    96;Wonder Woman Enterprise;Hillbilly Alligators;2;1;0;0;False;False;False;False;True;False;S.3;WBBL
+    97;Halloween Hellraisers;Warpstone Enjoyer;1;0;0;0;False;False;False;False;True;False;S.3;WBBL
+    98;Velocity Raptors;Lucky Men in Tights;1;4;0;0;False;False;False;False;True;False;S.3;WBBL
+    99;Black and Bite;Elf Elves;2;0;0;0;False;False;False;False;True;False;S.3;WBBL
+    100;Wonder Woman Enterprise;Lucky Men in Tights;2;1;0;0;False;False;False;False;True;False;S.3;WBBL
+    101;Black and Bite;Halloween Hellraisers;2;0;0;0;False;False;False;False;True;False;S.3;WBBL
+    102;Halloween Hellraisers;Lucky Men in Tights;0;2;0;0;False;False;False;False;True;False;S.3;WBBL
+    103;Wonder Woman Enterprise;Black and Bite;2;1;0;0;False;False;False;False;True;False;S.3;WBBL
+    1;Zero Fox Given;Gut Smashas;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    2;Münster Undead;Pitbull Stealers;1;2;0;0;False;False;False;False;False;False;S.4;WBBL
+    3;Valhalla Ice Warriors;Carroburg Cosmopolitans;2;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    4;Monasterium Longhorns;Skull Riders MC;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    5;Hashuts Brazen Bulls;Doom and Gloom;1;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    6;Hashuts Brazen Bulls;Doom and Gloom;0;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    7;Monasterium Longhorns;Münster Undead;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    8;Skull Riders MC;Zero Fox Given;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    9;Pitbull Stealers;Bilgewater Loonshiners;1;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    10;Monasterium Longhorns;Die Physiognomie des Bösen;2;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    11;Gut Smashas;Orc Titans;1;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    12;Orc Titans;Bumbay Buttgrabbaz;1;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    13;Carroburg Cosmopolitans;Die Physiognomie des Bösen;1;2;0;0;False;False;False;False;False;False;S.4;WBBL
+    14;Monasterium Longhorns;Lab Rats;0;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    15;Zero Fox Given;Die Physiognomie des Bösen;1;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    16;Bumbay Buttgrabbaz;Die Sechsen;2;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    17;Pitbull Stealers;Valhalla Ice Warriors;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    18;Die Physiognomie des Bösen;Pitbull Stealers;0;3;0;0;False;False;False;False;False;False;S.4;WBBL
+    19;Naggaroth Nightstabbers;Valhalla Ice Warriors;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    20;Zero Fox Given;Bumbay Buttgrabbaz;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    21;Naggaroth Nightstabbers;Mimigernafords Horde;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    22;Skull Riders MC;Bumbay Buttgrabbaz;0;2;0;0;False;False;False;False;False;False;S.4;WBBL
+    23;Bilgewater Loonshiners;Karak Eight Peaks Kroppzeuch;3;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    24;Lab Rats;Skull Riders MC;2;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    25;Naggaroth Nightstabbers;Gut Smashas;2;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    26;Mimigernafords Horde;Orc Titans;2;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    27;Skull Riders MC;Mimigernafords Horde;1;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    28;Bumbay Buttgrabbaz;Gut Smashas;2;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    29;Bilgewater Loonshiners;Happy Hungry Hippos;0;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    30;Naggaroth Nightstabbers;Münster Vampire;2;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    31;Monasterium Longhorns;Valhalla Ice Warriors;2;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    32;Naggaroth Nightstabbers;Orc Titans;3;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    33;Mimigernafords Horde;Carroburg Cosmopolitans;2;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    34;Skull Riders MC;Orc Titans;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    35;Naggaroth Nightstabbers;Münster Undead;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    36;Happy Hungry Hippos;Zero Fox Given;2;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    37;Skull Riders MC;Mortheim Maniacs;2;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    38;Karak Eight Peaks Kroppzeuch;Happy Hungry Hippos;1;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    39;Münster Undead;Bumbay Buttgrabbaz;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    40;Monasterium Longhorns;Happy Hungry Hippos;0;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    41;Bumbay Buttgrabbaz;Mimigernafords Horde;0;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    42;Bumbay Buttgrabbaz;Mortheim Maniacs;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    43;Naggaroth Nightstabbers;Die Physiognomie des Bösen;2;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    44;Magadan  Raiders;Münster Undead;1;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    45;Magadan  Raiders;Mortheim Maniacs;2;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    46;Magadan  Raiders;Carroburg Cosmopolitans;0;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    47;Carroburg Cosmopolitans;Die Physiognomie des Bösen;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    48;Die Physiognomie des Bösen;Valhalla Ice Warriors;1;2;0;0;False;False;False;False;False;False;S.4;WBBL
+    49;Münster Undead;Pitbull Stealers;0;2;0;0;False;False;False;False;False;False;S.4;WBBL
+    50;Magadan  Raiders;Happy Hungry Hippos;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    51;Monasterium Longhorns;Magadan  Raiders;1;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    52;Orc Titans;Valhalla Ice Warriors;1;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    53;Skull Riders MC;TuS Heringsmoor;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    54;Monasterium Longhorns;Pitbull Stealers;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    55;Orc Titans;Happy Hungry Hippos;1;2;0;0;False;False;False;False;False;False;S.4;WBBL
+    56;Carroburg Cosmopolitans;Magadan  Raiders;0;2;0;0;False;False;False;False;False;False;S.4;WBBL
+    57;Mimigernafords Horde;Valhalla Ice Warriors;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    58;Magadan  Raiders;Orc Titans;3;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    59;BSV Hamm;Pitbull Stealers;1;2;0;0;False;False;False;False;False;False;S.4;WBBL
+    60;Die Physiognomie des Bösen;Happy Hungry Hippos;1;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    61;Magadan  Raiders;Gorks Saints;2;1;0;0;False;False;False;False;False;False;S.4;WBBL
+    62;Naggaroth Nightstabbers;BSV Hamm;2;0;0;0;False;False;False;False;False;False;S.4;WBBL
+    63;Magadan  Raiders;Orc Titans;3;0;0;0;False;False;False;False;True;False;S.4;WBBL
+    64;Skull Riders MC;Happy Hungry Hippos;1;2;0;0;False;False;False;False;True;False;S.4;WBBL
+    65;Naggaroth Nightstabbers;Pitbull Stealers;0;1;0;0;False;False;False;False;True;False;S.4;WBBL
+    66;Zero Fox Given;Die Physiognomie des Bösen;2;1;0;0;False;False;False;False;True;False;S.4;WBBL
+    67;Pitbull Stealers;Happy Hungry Hippos;1;0;0;0;False;False;False;False;True;False;S.4;WBBL
+    68;Magadan  Raiders;Zero Fox Given;3;1;0;0;False;False;False;False;True;False;S.4;WBBL
+    69;Zero Fox Given;Happy Hungry Hippos;2;1;0;0;False;False;False;False;True;False;S.4;WBBL
+    70;Magadan  Raiders;Pitbull Stealers;0;1;0;0;False;False;False;False;True;False;S.4;WBBL
+    1;Knochensack FC;Münster Dark Elf;0;0;0;0;False;False;False;False;False;False;S. 5;WBBL
+    2;Sylvanian Spotlight;TuS Heringsmoor;3;0;0;0;False;False;False;False;False;False;S. 5;WBBL
+    3;Münster Dark Elf;Mutated Vaultboys 87;1;1;0;0;False;False;False;False;False;False;S. 5;WBBL
+    4;Sylvanian Spotlight;Mutated Vaultboys 87;2;0;0;0;False;False;False;False;False;False;S. 5;WBBL
   additional_statistics.csv: |
     team_name;casualties;season_short_name;league_short_name
     Mighty Moon Moshaz;1;S.2;WBBL
@@ -1376,3 +1520,145 @@ data:
     Masters of the Universe;2;S.3;WBBL
     Zharrduk Oathbreakers;2;S.3;WBBL
     Gut Smashas;1;S.3;WBBL
+    Wulfriks Wanderers;1;S.3;WBBL
+    Velocity Raptors;2;S.3;WBBL
+    Wonder Woman Enterprise;1;S.3;WBBL
+    Hillbilly Alligators;1;S.3;WBBL
+    Halloween Hellraisers;2;S.3;WBBL
+    Warpstone Enjoyer;1;S.3;WBBL
+    Velocity Raptors;1;S.3;WBBL
+    Lucky Men in Tights;1;S.3;WBBL
+    Elf Elves;1;S.3;WBBL
+    Black and Bite;3;S.3;WBBL
+    Wonder Woman Enterprise;3;S.3;WBBL
+    Lucky Men in Tights;1;S.3;WBBL
+    Black and Bite;1;S.3;WBBL
+    Halloween Hellraisers;2;S.3;WBBL
+    Lucky Men in Tights;1;S.3;WBBL
+    Wonder Woman Enterprise;2;S.3;WBBL
+    Black and Bite;1;S.3;WBBL
+    Gut Smashas;4;S.4;WBBL
+    Münster Undead;1;S.4;WBBL
+    Zero Fox Given;2;S.4;WBBL
+    Valhalla Ice Warriors;3;S.4;WBBL
+    Carroburg Cosmopolitans;1;S.4;WBBL
+    Monasterium Longhorns;1;S.4;WBBL
+    Hashuts Brazen Bulls;5;S.4;WBBL
+    Doom and Gloom;3;S.4;WBBL
+    Monasterium Longhorns;2;S.4;WBBL
+    Münster Undead;2;S.4;WBBL
+    Skull Riders MC;3;S.4;WBBL
+    Zero Fox Given;1;S.4;WBBL
+    Pitbull Stealers;5;S.4;WBBL
+    Bilgewater Loonshiners;2;S.4;WBBL
+    Monasterium Longhorns;3;S.4;WBBL
+    Die Physiognomie des Bösen;3;S.4;WBBL
+    Gut Smashas;4;S.4;WBBL
+    Orc Titans;2;S.4;WBBL
+    Orc Titans;1;S.4;WBBL
+    Bumbay Buttgrabbaz;5;S.4;WBBL
+    Carroburg Cosmopolitans;3;S.4;WBBL
+    Die Physiognomie des Bösen;1;S.4;WBBL
+    Lab Rats;1;S.4;WBBL
+    Zero Fox Given;3;S.4;WBBL
+    Die Physiognomie des Bösen;3;S.4;WBBL
+    Die Sechsen;1;S.4;WBBL
+    Bumbay Buttgrabbaz;2;S.4;WBBL
+    Pitbull Stealers;5;S.4;WBBL
+    Valhalla Ice Warriors;3;S.4;WBBL
+    Die Physiognomie des Bösen;3;S.4;WBBL
+    Pitbull Stealers;9;S.4;WBBL
+    Naggaroth Nightstabbers;5;S.4;WBBL
+    Bumbay Buttgrabbaz;4;S.4;WBBL
+    Naggaroth Nightstabbers;1;S.4;WBBL
+    Mimigernafords Horde;3;S.4;WBBL
+    Skull Riders MC;3;S.4;WBBL
+    Bumbay Buttgrabbaz;3;S.4;WBBL
+    Bilgewater Loonshiners;2;S.4;WBBL
+    Karak Eight Peaks Kroppzeuch;2;S.4;WBBL
+    Lab Rats;2;S.4;WBBL
+    Skull Riders MC;3;S.4;WBBL
+    Naggaroth Nightstabbers;3;S.4;WBBL
+    Orc Titans;2;S.4;WBBL
+    Mimigernafords Horde;5;S.4;WBBL
+    Skull Riders MC;3;S.4;WBBL
+    Gut Smashas;2;S.4;WBBL
+    Bumbay Buttgrabbaz;2;S.4;WBBL
+    Bilgewater Loonshiners;4;S.4;WBBL
+    Happy Hungry Hippos;1;S.4;WBBL
+    Naggaroth Nightstabbers;1;S.4;WBBL
+    Münster Vampire;2;S.4;WBBL
+    Monasterium Longhorns;1;S.4;WBBL
+    Valhalla Ice Warriors;3;S.4;WBBL
+    Orc Titans;2;S.4;WBBL
+    Mimigernafords Horde;1;S.4;WBBL
+    Carroburg Cosmopolitans;3;S.4;WBBL
+    Skull Riders MC;2;S.4;WBBL
+    Orc Titans;1;S.4;WBBL
+    Happy Hungry Hippos;1;S.4;WBBL
+    Zero Fox Given;2;S.4;WBBL
+    Skull Riders MC;2;S.4;WBBL
+    Mortheim Maniacs;1;S.4;WBBL
+    Karak Eight Peaks Kroppzeuch;4;S.4;WBBL
+    Happy Hungry Hippos;3;S.4;WBBL
+    Münster Undead;2;S.4;WBBL
+    Bumbay Buttgrabbaz;2;S.4;WBBL
+    Monasterium Longhorns;5;S.4;WBBL
+    Happy Hungry Hippos;2;S.4;WBBL
+    Bumbay Buttgrabbaz;3;S.4;WBBL
+    Mimigernafords Horde;3;S.4;WBBL
+    Mortheim Maniacs;1;S.4;WBBL
+    Bumbay Buttgrabbaz;1;S.4;WBBL
+    Die Physiognomie des Bösen;2;S.4;WBBL
+    Magadan  Raiders;6;S.4;WBBL
+    Münster Undead;3;S.4;WBBL
+    Magadan  Raiders;3;S.4;WBBL
+    Mortheim Maniacs;1;S.4;WBBL
+    Magadan  Raiders;3;S.4;WBBL
+    Carroburg Cosmopolitans;4;S.4;WBBL
+    Carroburg Cosmopolitans;3;S.4;WBBL
+    Die Physiognomie des Bösen;3;S.4;WBBL
+    Die Physiognomie des Bösen;2;S.4;WBBL
+    Valhalla Ice Warriors;7;S.4;WBBL
+    Pitbull Stealers;2;S.4;WBBL
+    Magadan  Raiders;1;S.4;WBBL
+    Happy Hungry Hippos;3;S.4;WBBL
+    Monasterium Longhorns;1;S.4;WBBL
+    Magadan  Raiders;4;S.4;WBBL
+    Orc Titans;1;S.4;WBBL
+    Valhalla Ice Warriors;2;S.4;WBBL
+    Skull Riders MC;1;S.4;WBBL
+    Monasterium Longhorns;1;S.4;WBBL
+    Pitbull Stealers;1;S.4;WBBL
+    Orc Titans;3;S.4;WBBL
+    Happy Hungry Hippos;4;S.4;WBBL
+    Magadan  Raiders;4;S.4;WBBL
+    Mimigernafords Horde;4;S.4;WBBL
+    Valhalla Ice Warriors;3;S.4;WBBL
+    Magadan  Raiders;6;S.4;WBBL
+    Orc Titans;3;S.4;WBBL
+    BSV Hamm;3;S.4;WBBL
+    Pitbull Stealers;3;S.4;WBBL
+    Die Physiognomie des Bösen;3;S.4;WBBL
+    Happy Hungry Hippos;4;S.4;WBBL
+    Magadan  Raiders;3;S.4;WBBL
+    Gorks Saints;2;S.4;WBBL
+    Naggaroth Nightstabbers;1;S.4;WBBL
+    Magadan  Raiders;5;S.4;WBBL
+    Orc Titans;2;S.4;WBBL
+    Happy Hungry Hippos;1;S.4;WBBL
+    Skull Riders MC;3;S.4;WBBL
+    Pitbull Stealers;2;S.4;WBBL
+    Zero Fox Given;9;S.4;WBBL
+    Die Physiognomie des Bösen;4;S.4;WBBL
+    Pitbull Stealers;2;S.4;WBBL
+    Happy Hungry Hippos;1;S.4;WBBL
+    Magadan  Raiders;2;S.4;WBBL
+    Zero Fox Given;1;S.4;WBBL
+    Zero Fox Given;3;S.4;WBBL
+    Happy Hungry Hippos;6;S.4;WBBL
+    Knochensack FC;3;S. 5;WBBL
+    Münster Dark Elf;3;S. 5;WBBL
+    Sylvanian Spotlight;5;S. 5;WBBL
+    Mutated Vaultboys 87;1;S. 5;WBBL
+    Mutated Vaultboys 87;2;S. 5;WBBL
